{{$NEXT}}

0.23     2016-06-20

- Added intersection types.


0.22     2016-06-18

- Require version 0.83. I know 0.77 doesn't work but I'm not sure exactly
  which version fixed the problem, since I cannot install older
  versions. Reported by Slaven Rezic. RT #115418.


0.21     2016-06-18

- Don't load Sub::Quote, but use it if it's already loaded. Since Moo uses it,
  this should make Specio constraints just work with Moo.


0.20     2016-06-18

- Removed test dependency on namespace::autoclean.


0.19     2016-06-17

- Removed dependency on Devel::PartialDump by making a copy of just the bits
  we need. Gross but effective.


0.18     2016-06-15

- Added union types.

- If a subtype's parent could be inlined and the subtype itself did not
  specify any additional constraints (inlinable or not), then the subtype was
  not being inlined, even though it could be.

- This distro now works with Perl 5.8 (though it was only tested with 5.8.8).


0.17     2016-06-01

- Change "use v5.10" to "use 5.010". The former appears to cause warnings on
  older Perls.


0.16     2016-05-30

- Remove use of Class::Load and Module::Runtime.


0.15     2016-05-30

- The Num and Int type now accepts numbers in scientific notation such as 1e10
  or -1.2e-5.

- Removed various prereqs that weren't really needed.

- Added three new libraries, Specio::Library::String, ::Numeric, and
  ::Perl. These provide additional commonly used string and numeric types, as
  well as some types related to Perl syntax.


0.14     2016-05-22

- Added an inline_assert method for constraint objects. This makes certain
  types of inlining tasks easier.

- Parameterized constraint objects now have a default name based on the parent
  type and contained type.

- Rewrote the code used for inlined types so that the generated inline code is
  optimized to check the most common cases first.

- Fixed a bug where two enum types could not be inlined together in the same
  sub.


0.13     2016-05-15
